@@ -72,13 +72,19 @@ The available formats for built distributions are:
 +-------------+------------------------------+---------+
 | Format      | Description                  | Notes   |
 +=============+==============================+=========+
-| ``gztar``   | gzipped tar file             | (1),(3) |
+| ``gztar``   | gzipped tar file             | \(1)    |
 |             | (:file:`.tar.gz`)            |         |
++-------------+------------------------------+---------+
+| ``bztar``   | bzipped tar file             |         |
+|             | (:file:`.tar.bz2`)           |         |
++-------------+------------------------------+---------+
+| ``xztar``   | xzipped tar file             |         |
+|             | (:file:`.tar.xz`)            |         |
 +-------------+------------------------------+---------+
 | ``ztar``    | compressed tar file          | \(3)    |
 |             | (:file:`.tar.Z`)             |         |
 +-------------+------------------------------+---------+
-| ``tar``     | tar file (:file:`.tar`)      | \(3)    |
+| ``tar``     | tar file (:file:`.tar`)      |         |
 +-------------+------------------------------+---------+
 | ``zip``     | zip file (:file:`.zip`)      | (2),(4) |
 +-------------+------------------------------+---------+
@@ -94,6 +100,9 @@ The available formats for built distributions are:
 | ``msi``     | Microsoft Installer.         |         |
 +-------------+------------------------------+---------+
 
+.. versionchanged: 3.5
+   Added support for the ``xztar`` format.
+
 
 Notes:
 
@@ -104,8 +113,7 @@ Notes:
    default on Windows
 
 (3)
-   requires external utilities: :program:`tar` and possibly one of :program:`gzip`,
-   :program:`bzip2`, or :program:`compress`
+   requires external :program:`compress` utility.
 
 (4)
    requires either external :program:`zip` utility or :mod:`zipfile` module (part
@@ -119,21 +127,22 @@ You don't have to use the :command:`bdist` command with the :option:`--formats`
 option; you can also use the command that directly implements the format you're
 interested in.  Some of these :command:`bdist` "sub-commands" actually generate
 several similar formats; for instance, the :command:`bdist_dumb` command
-generates all the "dumb" archive formats (``tar``, ``ztar``, ``gztar``, and
-``zip``), and :command:`bdist_rpm` generates both binary and source RPMs.  The
-:command:`bdist` sub-commands, and the formats generated by each, are:
+generates all the "dumb" archive formats (``tar``, ``gztar``, ``bztar``,
+``xztar``, ``ztar``, and ``zip``), and :command:`bdist_rpm` generates both
+binary and source RPMs.  The :command:`bdist` sub-commands, and the formats
+generated by each, are:
 
-+--------------------------+-----------------------+
-| Command                  | Formats               |
-+==========================+=======================+
-| :command:`bdist_dumb`    | tar, ztar, gztar, zip |
-+--------------------------+-----------------------+
-| :command:`bdist_rpm`     | rpm, srpm             |
-+--------------------------+-----------------------+
-| :command:`bdist_wininst` | wininst               |
-+--------------------------+-----------------------+
-| :command:`bdist_msi`     | msi                   |
-+--------------------------+-----------------------+
++--------------------------+-------------------------------------+
+| Command                  | Formats                             |
++==========================+=====================================+
+| :command:`bdist_dumb`    | tar, gztar, bztar, xztar, ztar, zip |
++--------------------------+-------------------------------------+
+| :command:`bdist_rpm`     | rpm, srpm                           |
++--------------------------+-------------------------------------+
+| :command:`bdist_wininst` | wininst                             |
++--------------------------+-------------------------------------+
+| :command:`bdist_msi`     | msi                                 |
++--------------------------+-------------------------------------+
 
 The following sections give details on the individual :command:`bdist_\*`
 commands.
